# comfyui-pixel-snapper

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pixel_snapper.py  pixel_snapper_glsl.json  pyproject.toml  sprite_sheet_animations-V10.json  sprite_sheet_animations-V11.json  sprite_sheet_animations-V2.json  sprite_sheet_animations-V3.json  sprite_sheet_animations-V4.json  sprite_sheet_animations-V5.json  sprite_sheet_animations-V6.json  sprite_sheet_animations-V7.json  sprite_sheet_animations-V8.json  sprite_sheet_animations-V9.json  sprite_sheet_animations.json
glsl/: README.md  align.glsl  alphacrisp.glsl  contentzoom.glsl  detect.glsl  emit_workflow.py  pixel_snapper_glsl.json  quantize.glsl  smartcrop.glsl  snap.glsl  test_glsl_pipeline.py
glsl/tests/: README.md  test_2k_chain.py  test_align.py  test_alpha_chain.py  test_anchor.py  test_grid.py  test_ground.py  test_lockoff.py  test_smartcrop.py  test_zoom_chain.py
tests/: smoke_test.py
